prepare for arxiv submission

--- a/manuscript/PUMP_Manuscript.Rmd
+++ b/manuscript/PUMP_Manuscript.Rmd
@@ -1,5 +1,9 @@
 ---
-title: 'Power Under Multiplicity Project (PUMP): Estimating Power, Minimum Detectable Effect Size and Sample Size When Adjusting for Multiple Outcomes'
+title: 'Power Under Multiplicity Project (PUMP): Estimating Power, Minimum Detectable Effect Size, and Sample Size When Adjusting for Multiple Outcomes'
+author:
+  - Kristen Hunter^[Harvard University Department of Statistics]
+  - Luke Miratrix^[Harvard Graduate School of Education]
+  - Kristin Porter^[MDRC]
 output:
   pdf_document:
     keep_tex: yes
@@ -52,7 +56,7 @@ In addition to the main functionality of estimating power, minimum detectable ef
 The `PUMP` `R` package fills in an important gap in open-source software tools to design multi-level randomized controlled trials (RCTs) with adequate statistical power.
 With this package, researchers can estimate statistical power, minimum detectable effect size (MDES), and needed sample size for multi-level experimental designs, in which units are nested within hierarchical structures such as students nested within schools nested within school districts.
 The statistical power is calculated for estimating the impact of a single intervention on multiple outcomes.
-The package uses a frequentist framework of mixed effects regression models, which is currently the prevailing framework for estimating impacts from experiments in education and other social policy research.\footnote{Other options include nonparametric or Bayesian methods, but these are less prevalent in applied research (for example, see @GELMANETAL2012, @GelmanHill2007).}
+The package uses a frequentist framework of mixed effects regression models, which is currently the prevailing framework for estimating impacts from experiments in education and other social policy research.^[Other options include nonparametric or Bayesian methods, but these are less prevalent in applied research (for example, see @GELMANETAL2012, @GelmanHill2007).]
 
 To our knowledge, none of the existing software tools for power calculations allow researchers to account for multiple hypothesis tests and the use of a multiple testing procedure (MTP).
 MTPs adjust $p$-values to reduce the likelihood of spurious findings when researchers are testing for effects on multiple outcomes.
@@ -121,7 +125,7 @@ These additional functions include:
 
 The authors of the `PUMP` package have also created a web application built with R Shiny.
 This web application calls the `PUMP` package and allows users to conduct calculations with a user-friendly interface, but it is less flexible than the package, with a focus on simpler scenarios (e.g., 10 or fewer outcomes).
-The app can be found at \url{www.pumpmdrc.io}.  
+The app can be found at \url{https://mdrcpump.shinyapps.io/pump_shiny/}.  
 
 The remainder of this paper is organized as follows.
 In Section~\ref{sec:diplomas}, we introduce Diplomas Now, an educational experiment, to be used as a running example throughout the paper.
@@ -176,7 +180,7 @@ For illustration purposes, we focus on one outcome group, attendance, which we w
 \label{sec:mtp_overview}
 
 Our motivating example illustrates that researchers are often interested in testing the effectiveness of a single intervention on multiple outcomes.
-The resulting multiplicity of statistical hypothesis tests can lead to spurious findings of effects.\footnote{Testing the effectiveness of an intervention for multiple subgroups, at multiple points in time, or across multiple treatment groups also results in a multiplicity of statistical hypotheses and can also lead to spurious findings of effects, but this is beyond the scope of this paper.}
+The resulting multiplicity of statistical hypothesis tests can lead to spurious findings of effects.^[Testing the effectiveness of an intervention for multiple subgroups, at multiple points in time, or across multiple treatment groups also results in a multiplicity of statistical hypotheses and can also lead to spurious findings of effects, but this is beyond the scope of this paper.]
 Multiple testing procedures counteract this problem by adjusting $p$-values for effect estimates; generally, $p$-values are adjusted upward to require a higher burden of proof.
 When not using a MTP, the probability of finding false positives increases, sometimes dramatically, with the number of tests.
 When using a MTP, this probability is reduced.
@@ -195,7 +199,7 @@ where $SE(\hat{ES}_m)$ is the standard error.
 A raw $p$-value would then be computed as the probability of being at least as extreme as the one observed, given that the null hypothesis is true.
 The term "raw" is used to denote unadjusted $p$-values, in contrast to values that have been adjusted using a MTP.
 For a two-sided test, the raw $p$-value for test $m$ is $p_m=2*Pr(T_m \geq |t_m|)$.
-The `PUMP` package allows for either one-sided or two-sided tests, but we proceed assuming two-sided tests going forward.\footnote{For a one-sided test, depending on the direction of our alternative hypothesis, the raw $p$-value for test $m$ is computed as $p_m=Pr(T_m \leq t_m)$ or $p_m=Pr(T_m \geq t_m)$.}
+The `PUMP` package allows for either one-sided or two-sided tests, but we proceed assuming two-sided tests going forward.^[For a one-sided test, depending on the direction of our alternative hypothesis, the raw $p$-value for test $m$ is computed as $p_m=Pr(T_m \leq t_m)$ or $p_m=Pr(T_m \geq t_m)$.]
 
 When testing a _single_ hypothesis under this framework, "researchers typically specify $\alpha$, the maximum acceptable probability of making a Type I error.
 A Type I error is the probability of erroneously rejecting the null hypothesis when it is true.
@@ -215,7 +219,7 @@ Nonetheless, any error inflation can still make it problematic to draw reliable 
 \subsection{Using MTPs to protect against spurious impact findings}
 \label{sec:mtp_use}
 
-As introduced above, multiple testing procedures adjust $p$-values to counteract the multiple testing problem.\footnote{Alternatively, MTPs can decrease the critical values for rejecting hypothesis tests. For ease of presentation, this paper focuses only on the approach of adjusting $p$-values.}
+As introduced above, multiple testing procedures adjust $p$-values to counteract the multiple testing problem.^[Alternatively, MTPs can decrease the critical values for rejecting hypothesis tests. For ease of presentation, this paper focuses only on the approach of adjusting $p$-values.]
 We next describe how using a MTP protects against false positives.
 
 Considering multiple outcomes presents both challenges and opportunities.
@@ -297,9 +301,8 @@ As a result of the difference in objective between FWER and FDR, in the case whe
 A side remark is that MTPs may provide either "weak control" or "strong control" of the error rate they target.
 A MTP "provides weak control of the FWER or the FDR at level $\alpha$ if the control can only be guaranteed when all null hypotheses are true, e.g. when the effects on all outcomes are zero.
 A MTP provides strong control of the FWER or FDR at level $\alpha$ if the control is guaranteed when some null hypotheses are true and some are false, e.g. when there may be effects on at least some outcomes.
-Of course, strong control is preferred" (@Porter2018).
-\footnote{The single-step and step-down Westfall Young MTPs (which we discuss below) always provide at least weak control of the FWER. In order for these procedures to provide strong control of the FWER, they require the assumption of subset pivotality (@RN33093).The distribution of the unadjusted test statistics or $p$-values is said to have subset pivotality if for any subset of null hypotheses, the joint distribution of the test statistics or of the $p-$values for the subset is identical to the distribution under the complete null.
-A consequence of this assumption is that the permutation of test statistics or $p$-values can be done under the complete null hypothesis rather than under the unknown partial hypothesis (@RN33093).}
+Of course, strong control is preferred" (@Porter2018).^[The single-step and step-down Westfall Young MTPs (which we discuss below) always provide at least weak control of the FWER. In order for these procedures to provide strong control of the FWER, they require the assumption of subset pivotality (@RN33093).The distribution of the unadjusted test statistics or $p$-values is said to have subset pivotality if for any subset of null hypotheses, the joint distribution of the test statistics or of the $p-$values for the subset is identical to the distribution under the complete null.
+A consequence of this assumption is that the permutation of test statistics or $p$-values can be done under the complete null hypothesis rather than under the unknown partial hypothesis (@RN33093).]
 
 \subsection{Single-step vs. stepwise procedures}
 \label{sec:stepwise}
@@ -332,7 +335,7 @@ For example, with $M = 5$ outcomes, the probability of detecting at least one ef
 Complete power, which is the probability of detecting effects on all outcomes, has similar issues.
 We define complete power only in the context where all effects are assumed to be false nulls --- if any outcomes are assumed to be true nulls, then complete power is undefined.
 
-There is an additional technical note about the calculation of complete power.\footnote{Complete power has also been referred to as “conjunctive power” (@RN33091) and “all pairs power” (@RN33097).}
+There is an additional technical note about the calculation of complete power.^[Complete power has also been referred to as “conjunctive power” (@RN33091) and “all pairs power” (@RN33097).]
 To calculate complete power, we do not need to adjust the $p$-values, and can instead reject each individual test based on the unadjusted $p$-values.
 Complete power is the power of the omnibus test constructed by whether or not we reject all the null hypotheses.
 This test was originally introduced as the intersection-union test because the null hypothesis is expressed as a union and the alternative hypothesis is expressed as an intersection (@Berger1982, @Berger1996).
@@ -351,20 +354,20 @@ For example, if we have two independent tests with Type I error $\alpha$, then i
 
 The final feature of a MTP that affects its statistical power is whether or not it takes into account the correlation between test statistics.
 "The Bonferroni and Holm procedures strongly control the FWER in all cases, even when the test statistics are correlated, but they adjust $p$-values more than is necessary in that case.
-Along with the Bonferroni and Holm MTPs, the Benjamin-Hochberg MTP also does not take correlations into account.\footnote{The Benjamini-Hochberg procedure was originally shown to control the FDR for independent test statistics. However, @BenjaminiYekutieli2001 showed that it also controls the FDR for true null hypotheses with “positive regression dependence.” This condition is satisfied
-for most applications in practice.}
+Along with the Bonferroni and Holm MTPs, the Benjamin-Hochberg MTP also does not take correlations into account.^[The Benjamini-Hochberg procedure was originally shown to control the FDR for independent test statistics. However, @BenjaminiYekutieli2001 showed that it also controls the FDR for true null hypotheses with “positive regression dependence.” This condition is satisfied
+for most applications in practice.]
 In contrast, both of the Westfall-Young MTPs rely on the estimation of the joint distribution of test statistics when the complete null hypothesis (that there are not effects on any of the outcomes) is true.
 This joint distribution of the test statistics is estimated from the study’s data" (@Porter2018).
 For example, random permutations of the treatment indicator break the association between treatment status and outcome.
 Repeating these permutations a large number of times results in a distribution of test statistics under the complete null.
 "Because the actual data are used to generate this null distribution, correlations among the test statistics are captured.
-Then observed test statistics can be compared with the distribution of test statistics under the complete null hypothesis" (@Porter2018).\footnote{Instead of using test statistics, the Westfall-Young MTPs can alternatively compare raw $p$-values with the estimated joint null distribution of $p$-values.}
+Then observed test statistics can be compared with the distribution of test statistics under the complete null hypothesis" (@Porter2018).^[Instead of using test statistics, the Westfall-Young MTPs can alternatively compare raw $p$-values with the estimated joint null distribution of $p$-values.]
 
 The correlation between test statistics is a parameter a researcher must specify in order to estimate power, MDES or sample size requirements when using a MTP.
 When fitting a separate regression model for the impact on each outcome, the $\binom{M}{2}$ correlations between test statistics are equal to the "pairwise correlations between the residuals in the $M$ impact models" (@Porter2018).
 Then, "if there are no covariates in the impact models or if the $R^2$’s of the covariates are equivalent in all impact models, then the correlations between the test statistics are equal to the correlations between the outcomes.
-However, having different $R^2$’s across the impact models reduces the correlations between the residuals and therefore between test statistics.\footnote{For example, one of the multiple outcomes may have a baseline covariate with a high $R^2$ while another may have a baseline covariate with
-a smaller $R^2$. Also, block dummies may explain more variation in some outcomes than in others.}
+However, having different $R^2$’s across the impact models reduces the correlations between the residuals and therefore between test statistics.^[For example, one of the multiple outcomes may have a baseline covariate with a high $R^2$ while another may have a baseline covariate with
+a smaller $R^2$. Also, block dummies may explain more variation in some outcomes than in others.]
 Models of outcomes that are highly correlated are more likely to have residuals that are highly correlated because baseline covariates will tend to have similar $R^2$’s.
 The gaps between the correlations between outcomes and the correlations between residuals --- and therefore the test statistics --- may be wider for moderately or weakly correlated outcomes.
 In any case, the upper bounds of correlations between the test statistics are the correlations between the outcomes" (@Porter2018).
@@ -402,7 +405,7 @@ This process would involve specifying parameter values such as $R^2$, the amount
 
 2. *Estimate impacts on the simulated data.*
 Given simulated data, we could fit $M$ regression models (specified to match the experimental design and model assumptions).
-For the models supported by `PUMP`, the relevant functions would be `lm()`, `lmer()` from the `lme4` library (@lme4), and `interacted_linear_estimators()` from the `blkvar` library.\footnote{This package is currently under development on GitHub; see \url{https://github.com/lmiratrix/blkvar}}
+For the models supported by `PUMP`, the relevant functions would be `lm()`, `lmer()` from the `lme4` library (@lme4), and `interacted_linear_estimators()` from the `blkvar` library.^[This package is currently under development on GitHub; see \url{https://github.com/lmiratrix/blkvar}]
 From the model output we extract the test statistics $t_m$ for the estimated impacts, one statistic for each outcome, along with estimated standard errors.
 
 3. *Calculate unadjusted $p$-values.*
@@ -431,7 +434,7 @@ To compute the different definitions of power:
 
 - *Individual power* for outcome $m$ is the proportion of the `tnum` rows in which the null hypothesis $m$ was rejected (the mean of column $m$ of $\mathbf{H}$). We would have $5$ different individual power values for Diplomas Now, corresponding to each outcome of interest.
   
-- *$d$-minimal power* is the proportion of the $tnum$ rows in which at least $d$ of the $M$ hypotheses were rejected.\footnote{Note that others refer to $1-$minimal power simply as “minimal power” (e.g., @RN33095; @RN23882; @MTSAS), “disjunctive power” (e.g., @RN33091), or “any pair” power (@RN33097). @RN23882 use the terminology of “r-power” for what is referred to here as $d-$minimal power for d>1.}
+- *$d$-minimal power* is the proportion of the $tnum$ rows in which at least $d$ of the $M$ hypotheses were rejected.^[Note that others refer to $1-$minimal power simply as “minimal power” (e.g., @RN33095; @RN23882; @MTSAS), “disjunctive power” (e.g., @RN33091), or “any pair” power (@RN33097). @RN23882 use the terminology of “r-power” for what is referred to here as $d-$minimal power for $d>1$.]
 For Diplomas Now, we could consider $1$-minimal power through $4$-minimal power.
 
 -  *Complete power* is the proportion of the $tnum$ rows in which all of the null hypotheses were rejected based on the raw $p$-values rather than adjusted $p$-values (based on the matrix $\mathbf{G}$ rather than $\mathbf{H}$.)
@@ -779,7 +782,7 @@ m2 <- update( m, power.definition = "min1" )
 kable(m2, digits = 2)
 ```
 
-The `update()` method can replace any number of arguments of the prior call with new ones, making exploration of different scenarios very straightforward.\footnote{The $`update()`$ method re-runs the underlying call of $`pump_mdes()`$, $`pump_sample()`$, or $`pump_power()`$ with the revised set of design parameters. You can even change which call to use via the `type` parameter.}
+The `update()` method can replace any number of arguments of the prior call with new ones, making exploration of different scenarios very straightforward.^[The update() method re-runs the underlying call of pump_mdes(), pump_sample(), or pump_power() with the revised set of design parameters. You can even change which call to use via the type parameter.]
 Our results show that if we just want to detect at least one outcome with 80% power, we can reliably detect an effect of size $0.08$ (assuming all five outcomes have effects of at least that size).
 
 When estimating power for multiple outcomes, it is important to consider cases where some of the outcomes in fact have null, or very small, effects, to hedge against circumstances such as one of the outcomes not being well measured.
@@ -845,9 +848,9 @@ The first column is power without adjustment, and the second has our power with 
 
 The next rows show different multi-outcome definitions of power.
 In particular, `1-minimum` shows the chance of rejecting at least one hypotheses.
-The `complete` row shows the power to reject all hypotheses; it is only defined if all outcomes are specified to have a non-zero effect.\footnote{The package does not show power for these without adjustment for multiple testing, as that power would be grossly inflated and meaningless.}
+The `complete` row shows the power to reject all hypotheses; it is only defined if all outcomes are specified to have a non-zero effect.^[The package does not show power for these without adjustment for multiple testing, as that power would be grossly inflated and meaningless.]
 
-We can look at a power curve of our `pump_sample()` call to assess how sensitive power is to our level two sample size:\footnote{The points on the plots show the evaluated simulation trials, with larger points corresponding to more iterations and greater precision.}
+We can look at a power curve of our `pump_sample()` call to assess how sensitive power is to our level two sample size:^[The points on the plots show the evaluated simulation trials, with larger points corresponding to more iterations and greater precision.]
 
 ```{r plotsamplepowercurve, fig.height = 3.5, fig.width=5, echo=TRUE}
 plot_power_curve( smp )
@@ -1059,7 +1062,7 @@ The `grid()` functions, by contrast, take a single MDES value for the non-null o
 We introduce the power under multiplicity project (`PUMP`) `R` package, which estimates power for multi-level randomized control trials with multiple outcomes.
 `PUMP` allows users to estimate power, MDES, and sample size requirements for a wide variety of commonly used RCT designs and models across different definitions of power and applying different MTPs.
 The functionality of `PUMP` fills an important gap, as existing tools do not allow researchers to conduct power, MDES or sample size calculations when applying a MTP.
-An online interface is also available at \url{www.mdrcpump.io}.
+An online interface is also available at \url{https://mdrcpump.shinyapps.io/pump_shiny/}.
 
 The main advantage of the `PUMP` package is to provide easily accessible estimation procedures so that users can properly account for power when making adjustments for multiple hypothesis testing.
 However, one of the additional strengths of the package is the ease with which a user can explore the impact of different designs, models, and assumptions on power, MDES or sample size.
